When a method has an empty body, don't drop the rest of the binding because of that. Bug 231324, r+sr=bryner